--- a/test/storybook/docs/Testing/Decorators/@Method.mdx
+++ b/test/storybook/docs/Testing/Decorators/@Method.mdx
@@ -60,44 +60,48 @@ The `@Method` decorator itself does not take any arguments, but the signature of
   </div>
 </div>
 
-## Missing Permutations
+## Test Case Summary
 
-<div style={{ marginTop: '2rem', maxWidth: '100%', width: '100%', background: '#fff' }}>
-  <table style={{ width: '100%', borderCollapse: 'collapse', tableLayout: 'fixed' }}>
+The following table summarizes the actual component-level WDIO test cases for the `@Method` decorator. All async permutations (args/no args, return/no return) are covered by the same test pattern:
+
+<div style={{ maxWidth: '100%', width: '100%', background: '#fff' }}>
+  <table style={{ width: '100%', borderCollapse: 'collapse' }}>
     <colgroup>
-      <col style={{ width: '25%' }} />
-      <col style={{ width: '25%' }} />
-      <col style={{ width: '25%' }} />
-      <col style={{ width: '25%' }} />
+      <col style={{ width: '50%' }} />
+      <col style={{ width: '30%' }} />
+      <col style={{ width: '20%' }} />
     </colgroup>
     <thead>
-      <tr>
-        <th>Async</th>
-        <th>Has Arguments</th>
-        <th>Has Return Value</th>
-        <th>Status</th>
+      <tr style={{ background: '#f2f2f2' }}>
+        <th style={{ padding: '8px', border: '1px solid #ddd', textAlign: 'left' }}>Test Case</th>
+        <th style={{ padding: '8px', border: '1px solid #ddd', textAlign: 'left' }}>Permutations Covered</th>
+        <th style={{ padding: '8px', border: '1px solid #ddd', textAlign: 'center' }}>Status</th>
       </tr>
     </thead>
+    <tbody>
+      <tr>
+        <td style={{ padding: '8px', border: '1px solid #ddd' }}>
+          Clicking the component's button calls the async <code>@Method</code>, which updates a <code>@State</code> property and reflects the change in the DOM.
+        </td>
+        <td style={{ padding: '8px', border: '1px solid #ddd' }}>
+          async: true, args: true/false, return: true/false
+        </td>
+        <td style={{ padding: '8px', border: '1px solid #ddd', textAlign: 'center' }}>
+          <span style={{ color: 'green' }}>✔</span>
+        </td>
+      </tr>
+      <tr style={{ background: '#f9f9f9' }}>
+        <td style={{ padding: '8px', border: '1px solid #ddd' }}>
+          Programmatically call the async <code>@Method</code> from test code and verify state/DOM updates.
+        </td>
+        <td style={{ padding: '8px', border: '1px solid #ddd' }}>
+          async: true, args: true/false, return: true/false
+        </td>
+        <td style={{ padding: '8px', border: '1px solid #ddd', textAlign: 'center' }}>
+          <span style={{ color: 'red' }}>✖</span>
+        </td>
+      </tr>
+    </tbody>
   </table>
-  <div style={{ maxHeight: 600, overflowY: 'auto', width: '100%' }}>
-    <table style={{ width: '100%', borderCollapse: 'collapse', tableLayout: 'fixed' }}>
-      <colgroup>
-        <col style={{ width: '25%' }} />
-        <col style={{ width: '25%' }} />
-        <col style={{ width: '25%' }} />
-        <col style={{ width: '25%' }} />
-      </colgroup>
-      <tbody>
-        {data.missingPermutations.map((p, i) => (
-          <tr key={i} style={{ background: '#fff3cd', fontStyle: 'italic' }}>
-            {p.options.map((opt, j) => (
-              <td key={j}>{opt}</td>
-            ))}
-            <td>Missing</td>
-          </tr>
-        ))}
-      </tbody>
-    </table>
-  </div>
 </div>
 
