--- a/.ai/testing/coverage-matrix/project-config.mdx
+++ b/.ai/testing/coverage-matrix/project-config.mdx
@@ -1,3 +1,7 @@
+import { Meta } from '@storybook/addon-docs/blocks';
+
+<Meta title="Testing/Coverage Matrix/Config" />
+
 # Project-Specific Coverage Matrix Configuration
 
 This file documents project-specific details for the coverage matrix workflow. It is intended to keep the main AI testing framework documentation generic and portable, while capturing all configuration and conventions unique to this project.
