Add project config to keep all settings in one place, clarify verification is a manual process

--- a/.ai/testing/coverage-matrix/verification.mdx
+++ b/.ai/testing/coverage-matrix/verification.mdx
@@ -4,9 +4,9 @@ import { Meta } from '@storybook/addon-docs/blocks';
 
 # Matrix Verification Process
 
-This file provides a concise guide for verifying the coverage matrix. The process is iterative and can be automated:
+This file provides a concise guide for verifying the coverage matrix. The process is iterative and currently performed manually, but may be automated in the future.
 
-1. **Sample Components:** Randomly select generated components.
+1. **Sample Components:** Randomly select generated components (manual process for now; automation may be added).
 2. **Mutate Decorators:** Programmatically change decorator values.
 3. **Rerun Coverage Script:** Check if the matrix/report reflects changes.
 4. **Validate Reliability:** Repeat to ensure consistent accuracy.
