Move the tests docs under tests folder

--- a/.ai/testing/tests/component_tests.mdx
+++ b/.ai/testing/tests/component_tests.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 
-<Meta title="Testing/Component Tests" />
+<Meta title="Testing/Tests/Component" />
 
 # Component-Level Tests (`test/wdio`)
 
