--- a/.ai/testing/tests/core_tests.mdx
+++ b/.ai/testing/tests/core_tests.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 
-<Meta title="Testing/Core Tests" />
+<Meta title="Testing/Tests/Core" />
 
 # Core Testing in the Stencil Project
 
