Remove references to local paths

--- a/test/storybook/docs/.ai/testing/project-config.mdx
+++ b/test/storybook/docs/.ai/testing/project-config.mdx
@@ -17,7 +17,7 @@ This file documents project-specific details for the coverage matrix workflow. I
 ## Running Coverage Scripts
 - You can run a coverage script directly for a specific decorator.
 - To run all coverage scripts at once, use `test/storybook/docs/Testing/Decorators/run-all-coverage.js`.
-- Alternatively, from `/Users/paul.visciano/repos/core/test/storybook`, run `npm run coverage` to execute all coverage scripts.
+- Alternatively, from `test/storybook`, run `npm run coverage` to execute all coverage scripts.
 
 ## Project Paths and Coverage Script Config
 - **Component Directory:** `test/wdio` (see `COMPONENTS_DIR` in verify-matrix.js)
