Group all framework docs under framework

--- a/test/storybook/docs/.ai/testing/audit.mdx
+++ b/test/storybook/docs/.ai/testing/audit.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 
-<Meta title="Testing/Audit" />
+<Meta title="Testing/Framework/Audit" />
 
 # Testing Strategy Audit Log
 
