--- a/test/storybook/docs/.ai/testing/roadmap-2025.mdx
+++ b/test/storybook/docs/.ai/testing/roadmap-2025.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 
-<Meta title="Testing/Roadmap/2025" />
+<Meta title="Testing/Framework/Roadmap/2025" />
 
 # Stencil.js Testing Roadmap 2025
 
