--- a/test/storybook/docs/.ai/testing/coverage-matrix/generation.mdx
+++ b/test/storybook/docs/.ai/testing/coverage-matrix/generation.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 
-<Meta title="Testing/Coverage Matrix/Generation" />
+<Meta title="Testing/Framework/Coverage Matrix/Generation" />
 
 # Matrix Generation Process
 
