--- a/test/storybook/docs/.ai/testing/coverage-matrix/overview.mdx
+++ b/test/storybook/docs/.ai/testing/coverage-matrix/overview.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 
-<Meta title="Testing/Coverage Matrix/Overview" />
+<Meta title="Testing/Framework/Coverage Matrix/Overview" />
 
 # Matrix Generation for Component Permutations
 
