--- a/test/storybook/docs/.ai/testing/coverage-matrix/verification.mdx
+++ b/test/storybook/docs/.ai/testing/coverage-matrix/verification.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 
-<Meta title="Testing/Coverage Matrix/Verification" />
+<Meta title="Testing/Framework/Coverage Matrix/Verification" />
 
 # Matrix Verification Process
 
