--- a/test/storybook/docs/.ai/testing/overview.mdx
+++ b/test/storybook/docs/.ai/testing/overview.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 
-<Meta title="Testing/Overview" />
+<Meta title="Testing/Framework/Overview" />
 
 # Stencil.js Testing Strategy
 
