--- a/test/storybook/docs/.ai/testing/project-config.mdx
+++ b/test/storybook/docs/.ai/testing/project-config.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 
-<Meta title="Testing/Project Config" />
+<Meta title="Testing/Framework/Project Config" />
 
 # Project-Specific Coverage Matrix Configuration
 
