--- a/test/storybook/docs/.ai/testing/tests/component_tests.mdx
+++ b/test/storybook/docs/.ai/testing/tests/component_tests.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 
-<Meta title="Testing/Tests/Component" />
+<Meta title="Testing/Framework/Tests/Component" />
 
 # Component-Level Tests (`test/wdio`)
 
