--- a/test/storybook/docs/.ai/testing/tests/core_tests.mdx
+++ b/test/storybook/docs/.ai/testing/tests/core_tests.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 
-<Meta title="Testing/Tests/Core" />
+<Meta title="Testing/Framework/Tests/Core" />
 
 # Core Testing in the Stencil Project
 
