--- a/test/storybook/docs/.ai/testing/tests/e2e_tests.mdx
+++ b/test/storybook/docs/.ai/testing/tests/e2e_tests.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 
-<Meta title="Testing/Tests/E2E" />
+<Meta title="Testing/Framework/Tests/E2E" />
 
 # E2E Testing
 
