--- a/test/storybook/docs/.ai/testing/coverage-matrix/verification.mdx
+++ b/test/storybook/docs/.ai/testing/coverage-matrix/verification.mdx
@@ -1,8 +1,9 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 
-<Meta title="Testing/Framework/Coverage Matrix/Verification" />
+<Meta title="Testing/Framework/Coverage Matrix/Verification" tags={['pending-review']} />
 
 # Matrix Verification Process
+<div style={{display: 'inline-block', padding: '4px 12px', background: '#ffe066', color: '#7c5c00', borderRadius: '16px', fontWeight: 'bold', marginBottom: '16px'}}>⏳ Pending Review</div>
 
 This file provides a concise guide for verifying the coverage matrix. The process is iterative and currently performed manually, but may be automated in the future.
 
