--- a/test/storybook/docs/.ai/testing/project-config.mdx
+++ b/test/storybook/docs/.ai/testing/project-config.mdx
@@ -1,8 +1,9 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 
-<Meta title="Testing/Framework/Project Config" />
+<Meta title="Testing/Framework/Project Config" tags={['pending-review']} />
 
 # Project-Specific Coverage Matrix Configuration
+<div style={{display: 'inline-block', padding: '4px 12px', background: '#ffe066', color: '#7c5c00', borderRadius: '16px', fontWeight: 'bold', marginBottom: '16px'}}>⏳ Pending Review</div>
 
 This file documents project-specific details for the coverage matrix workflow. It is intended to keep the main AI testing framework documentation generic and portable, while capturing all configuration and conventions unique to this project.
 
