--- a/test/storybook/docs/.ai/testing/roadmap-2025.mdx
+++ b/test/storybook/docs/.ai/testing/roadmap-2025.mdx
@@ -1,8 +1,9 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 
-<Meta title="Testing/Framework/Roadmap/2025" />
+<Meta title="Testing/Framework/Roadmap/2025" tags={['pending-review']} />
 
 # Stencil.js Testing Roadmap 2025
+<div style={{display: 'inline-block', padding: '4px 12px', background: '#ffe066', color: '#7c5c00', borderRadius: '16px', fontWeight: 'bold', marginBottom: '16px'}}>⏳ Pending Review</div>
 
 <div style={{ width: '100%', marginBottom: '2rem', position: 'relative', height: 100 }}>
   <div style={{ position: 'absolute', left: 0, right: 0, top: 48, height: 4, background: '#e5e7eb', borderRadius: 2 }}></div>
