--- a/test/storybook/docs/.ai/testing/tests/core_tests.mdx
+++ b/test/storybook/docs/.ai/testing/tests/core_tests.mdx
@@ -1,8 +1,9 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 
-<Meta title="Testing/Framework/Tests/Core" />
+<Meta title="Testing/Framework/Tests/Core Tests" tags={['pending-review']} />
 
 # Core Testing in the Stencil Project
+<div style={{display: 'inline-block', padding: '4px 12px', background: '#ffe066', color: '#7c5c00', borderRadius: '16px', fontWeight: 'bold', marginBottom: '16px'}}>⏳ Pending Review</div>
 
 This document covers all **core (source/implementation)** tests for Stencil, which are located under the `src` folder. These tests directly exercise Stencil's source code, validating its core logic, compiler internals, CLI utilities, and system utilities. They are tightly coupled to the implementation and often use internal APIs and mocks.
 
