--- a/test/storybook/docs/.ai/testing/tests/e2e_tests.mdx
+++ b/test/storybook/docs/.ai/testing/tests/e2e_tests.mdx
@@ -1,8 +1,9 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 
-<Meta title="Testing/Framework/Tests/E2E" />
+<Meta title="Testing/Framework/Tests/E2E Tests" tags={['pending-review']} />
 
-# E2E Testing
+# E2E Tests
+<div style={{display: 'inline-block', padding: '4px 12px', background: '#ffe066', color: '#7c5c00', borderRadius: '16px', fontWeight: 'bold', marginBottom: '16px'}}>⏳ Pending Review</div>
 
 This document covers all **end-to-end (E2E)** tests for Stencil, which are located under the `test` folder. These tests validate Stencil from the outside by importing it as a dependency, simulating real-world usage, and testing E2E scenarios and feature behaviors. They are loosely coupled and focus on user-facing features, build outputs, and application-level scenarios.
 
