--- a/test/storybook/docs/.ai/testing/coverage-matrix/overview.mdx
+++ b/test/storybook/docs/.ai/testing/coverage-matrix/overview.mdx
@@ -1,8 +1,9 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 
-<Meta title="Testing/Framework/Coverage Matrix/Overview" />
+<Meta title="Testing/Framework/Coverage Matrix/Overview" tags={['pending-review']} />
 
 # Matrix Generation for Component Permutations
+<div style={{display: 'inline-block', padding: '4px 12px', background: '#ffe066', color: '#7c5c00', borderRadius: '16px', fontWeight: 'bold', marginBottom: '16px'}}>⏳ Pending Review</div>
 
 ## Why Matrix-Driven Static Analysis Coverage Is Essential
 
