--- a/test/storybook/docs/.ai/testing/overview.mdx
+++ b/test/storybook/docs/.ai/testing/overview.mdx
@@ -1,6 +1,9 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 
-<Meta title="Testing/Framework/Overview" />
+<Meta title="Testing/Framework/Overview" tags={['pending-review']} />
+
+# Testing Framework Overview
+<div style={{display: 'inline-block', padding: '4px 12px', background: '#ffe066', color: '#7c5c00', borderRadius: '16px', fontWeight: 'bold', marginBottom: '16px'}}>⏳ Pending Review</div>
 
 # Stencil.js Testing Strategy
 
